--- a/app/globals.css
+++ b/app/globals.css
@@ -85,3 +85,23 @@ body {
   }
   
 }
+
+div img {
+  animation: reveal linear both;
+  animation-timeline: view();
+  animation-range: entry 20% cover 30% ;
+
+}
+
+@keyframes reveal {
+  0% {
+    opacity: 0;
+    translate: 0 100px;
+    scale: 0.5;
+  }
+  100% {
+    opacity: 1;
+    translate: 0 0;
+    scale:1;
+  }
+}
