--- a/app/globals.css
+++ b/app/globals.css
@@ -22,10 +22,9 @@ body {
   background: url('/Images/banners/4.jpg') no-repeat center/cover;
 }
 
-.tiraSafari {
-  background: url('/Images/banners/tira-safari.png') repeat center center/cover;
+.animationTira {
   background-repeat: repeat-x;
-  animation: translateImage 20s infinite reverse;
+  animation: translateImage 10s infinite ;
 }
 
 @keyframes translateImage {
